--- a/styles/base.css
+++ b/styles/base.css
@@ -15,3 +15,34 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 60px;
+}
+
+.header__link {
+  font-size: 39px;
+  font-weight: bold;
+}
+
+.header__nav-container {
+  display: flex;
+  justify-content: center;
+}
+
+.nav {
+  display: inline-block;
+}
+
+.nav__list {
+  list-style: none;
+  display: flex;
+}
+
+.nav__list-item {
+  margin-inline-end: 35px;
+  font-size: 19px;
+}
