--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,11 @@
 :root {
   --color-primary: #ff7b54;
   --color-text-on-primary: #fff;
+  --color-button-border: var(--color-text-on-primary);
+  --color-button-primary-bg: var(--color-text-on-primary);
+  --color-button-primary-text: var(--color-primary);
+  --color-button-secondary-bg: var(--color-primary);
+  --color-button-secondary-text: var(--color-text-on-primary);
 
   --font-family: "Inter", sans-serif;
 }
@@ -14,6 +19,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  margin: 0;
 }
 
 .header {
@@ -45,4 +54,33 @@ a {
 .nav__list-item {
   margin-inline-end: 35px;
   font-size: 19px;
+}
+
+.button {
+  font-size: 32px;
+  padding: 0 64px;
+  height: 100px;
+  border: 4px solid var(--color-button-border);
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: outline 200ms ease-in-out;
+}
+
+.button:hover,
+.button:focus {
+  outline: 2px solid var(--color-text-on-primary);
+}
+
+.button--primary {
+  background-color: var(--color-button-primary-bg);
+  color: var(--color-button-primary-text);
+}
+
+.button--secondary {
+  background-color: var(--color-button-secondary-bg);
+  color: var(--color-button-secondary-text);
+}
+
+.button__icon {
+  vertical-align: middle;
 }
