--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,20 @@
 @import url("./base.css");
+
+.main {
+  padding: 150px;
+}
+
+.main__heading {
+  font-size: 128px;
+  font-weight: bold;
+}
+
+.main__sub-heading {
+  font-size: 40px;
+}
+
+.button-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 100px;
+}
